Move Openshift logo from right side to left side to avoid conflict with add button #40

--- a/components/frontend-web/src/app/app.component.scss
+++ b/components/frontend-web/src/app/app.component.scss
@@ -17,7 +17,7 @@ ion-content {
 .desktop-footer {
   position: fixed;
   bottom: 0;
-  right: 2%;
+  left: 2%;
 }
 
 .menu-footer {
